argoCD/applications/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:154959837798:certificate/d74499a9-d932-4578-98a0-7b7f317bb429

    alb.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  ingressClassName: alb

  rules:
    - host: argocd.campus-navi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
